# Application

./: .dockerignore  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  render.yaml
apps/api/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  docker-entrypoint.sh  (+1 more)
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: db.py  deps.py
backend/app/api/: __init__.py  jobs.py
backend/app/core/: enums.py  errors.py
backend/app/email/: caps.py  governor.py  tasks.py
backend/app/events/: bus.py  contracts.py  names.py
backend/app/events/fixtures/: application_submitted.json  cv_generated.json  job_discovered.json  job_scored.json  outreach_sent.json
backend/app/integrations/: r2.py
backend/app/llm/: relevance.py  track_classify.py
backend/app/models/: __init__.py  application.py  base.py  generated_cv.py  job.py  master_profile.py  outreach.py  user.py  va.py
backend/app/pipelines/apply/: render.py  service.py
backend/app/pipelines/outreach/: tasks.py
backend/app/pipelines/respond/: tasks.py
backend/app/repositories/: profiles.py
backend/app/sources/: __init__.py  ashby.py  greenhouse.py
backend/app/workers/: celery_app.py
backend/tests/: conftest.py  test_addressing.py  test_event_contracts.py  test_governor.py  test_pipeline_apply.py  test_scoring.py
docs/: APPLICATION_FLOW.md  BUILD_REPORT.md  JOB_SOURCES.md  PROGRESS.md  RENDER.md  SETUP.md
frontend/: .gitignore  package-lock.json  package.json
infra/: .env.example  README.md  docker-compose.nginx.yml  docker-compose.yml
src/: App.tsx
(+231 files in other folders)
