[project]
name = "jd-engine"
version = "0.1.0"
description = "Job Application & Outreach Engine — FastAPI modular monolith"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "structlog>=24.4",
    "uuid7>=0.1",
    "anthropic>=0.42",
    "boto3>=1.35",
    "resend>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.uv]
package = false
